<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="292dp"
        android:layout_height="47dp"
        android:fontFamily="sans-serif-condensed"
        android:lineSpacingExtra="10sp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094" />

    <Button
        android:id="@+id/button_patients"
        android:layout_width="319dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="104dp"
        android:lineSpacingExtra="12sp"
        android:onClick="openClinic"
        android:text="@string/main_clinics"
        android:textSize="18sp"
        android:visibility="visible"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@+id/button_clinics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_clinics"
        android:layout_width="319dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:lineSpacingExtra="12sp"
        android:text="@string/main_patients"
        android:textSize="18sp"
        android:visibility="visible"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@+id/button_readings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_patients" />

    <Button
        android:id="@+id/button_readings"
        android:layout_width="319dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:lineSpacingExtra="12sp"
        android:text="@string/main_readings"
        android:textSize="18sp"
        android:visibility="visible"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@+id/button_add_reading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_clinics" />

    <Button
        android:id="@+id/button_add_reading"
        android:layout_width="319dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:lineSpacingExtra="12sp"
        android:text="@string/main_add_reading"
        android:textSize="18sp"
        android:visibility="visible"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@+id/button_export"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_readings" />

    <Button
        android:id="@+id/button_export"
        android:layout_width="319dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:lineSpacingExtra="12sp"
        android:text="@string/main_export"
        android:textSize="18sp"
        android:visibility="visible"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@+id/button_import"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_add_reading" />

    <Button
        android:id="@+id/button_import"
        android:layout_width="319dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:lineSpacingExtra="12sp"
        android:text="@string/main_import"
        android:textSize="18sp"
        android:visibility="visible"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_export" />

</android.support.constraint.ConstraintLayout>